kubernetes/apps/ai/envoy-ai-gateway/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: envoy-ai-gateway-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-ai
  apiKeyAuth:
    credentialRefs:
      - group: ""
        kind: Secret
        name: envoy-ai-gateway-secret
    extractFrom:
      - headers:
          - x-api-key
      - headers:
          - authorization
